changing conflict calc

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       	<div class="sliders" id="isd"></div>
         <h5 class="subcat">Past ARC deployments <small><span class="deploy weight"></span></small></h5>
         <div class="sliders" id="deploy"></div>
-        <h5 class="subcat">Human conflict <small><span class="conflict weight"></span></small></h5>
+        <h5 class="subcat">Human conflict (lack of) <small><span class="conflict weight"></span></small></h5>
       	<div class="sliders" id="conflict"></div>
       </div>
     </div>
