fixing how table generates

--- a/index.html
+++ b/index.html
@@ -67,20 +67,16 @@
 <hr>
 
   <div class="row">
-    <table id="countryTable" class="sortable-theme-minimal">
-
-      <thead>
-      <tr>
-        <th>Score</th>
-        <th>Country</th>
-      </tr>
-      </thead>
-
-      <tbody id="tablebody">
-
-      </tbody>
-
-    </table>
+    <table id="countryTable" class="table">
+          <thead>
+          <tr>
+            <th>Score</th>
+            <th>Country</th>
+          </tr>
+          </thead>
+          <tbody id="tableBody">
+          </tbody>
+      </table>
 
   </div>
 
