--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
   <body>
 
 
-  <div class=container>
+  <div class="container-fluid">
+
+    <div class="row">
+      <div id="map" style="width=100%; text-align:center;"></div>
+    </div>
+  </div>
+
+<div class="container">
     <div class="row">
       <div id="need-group" class="col-md-4">
         <h3>Need <small><span class="need weight"></span></small></h3>
@@ -87,6 +94,9 @@
     <script src="js/nouislider.min.js"></script>
     <script src="js/jquery.datatables.min.js"></script> <!-- v1.10.10 -->
     <script src="js/d3.min.js"></script> <!-- v3.5.10 -->
+    <script src="js/d3.geo.projection.v0.min.js"></script>
+    <script src="js/topojson.v1.min.js"></script>
+    <script src="js/colorbrewer.min.js"></script>
     <script src="js/main.js"></script>
 
 
