--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title></title>
+    <title>ISD prioritization</title>
 
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -24,6 +24,7 @@
   </head>
   <body>
 
+  <div id="tooltip"></div>
 
   <div class="container-fluid">
 
