correcting INFORM data date

--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
 
 <hr>
 
-<p><h5>Natural disasters - 2015 projected disaster risk</h5>
-<small>Data source: 2015 INFORM database.</small></p>
+<p><h5>Natural disasters - 2016 projected disaster risk</h5>
+<small>Data source: 2016 INFORM database v0.2.25.</small></p>
 
 <p><h5>Vulnerability - Includes socioeconomics and vulnerable groups.</h5>
-<small>Data source: 2015 INFORM database.</small></p>
+<small>Data source: 2016 INFORM database v0.2.25.</small></p>
 
 <p><h5>Lack of Coping Capacity - Includes institutional support and existing infrastructure</h5>
-<small>Data source: 2015 INFORM database.</small></p>
+<small>Data source: 2016 INFORM database v0.2.25.</small></p>
 
 <p><h5>Population - 2013, in millions </h5>
 <small>Data source: OECD and World Bank. 2013 was the most recent year for which data were available at the time of map production. DAC countries have been excluded from this map.</small></p>
@@ -66,7 +66,7 @@
 <small>Data source: ARC. Data are accurate as of Dec 2015.</small></p>
 
 <p><h5>Lack of Human Conflict - Includes current and projected levels </h5>
-<small>Data source: 2015 INFORM database.</small></p>
+<small>Data source: 2016 INFORM database v0.2.25.</small></p>
 
 <hr>
 
