graphs of score breakdown

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/nouislider.min.css" rel="stylesheet">
-    <link href="css/jquery.datatables.min.css" rel="stylesheet"> <!-- v1.10.10 -->
-
+    <link href="css/nv.d3.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
 
 
@@ -181,29 +180,19 @@
 <hr>
 
   <div class="row">
-    <table id="countryTable" class="table">
-          <thead>
-          <tr>
-            <th>Score</th>
-            <th>Country</th>
-          </tr>
-          </thead>
-          <tbody id="tableBody">
-          </tbody>
-      </table>
-
+    <div id="graph"></div>
   </div>
 
-</div>
+  <div style="height:80px;"></div> <!-- spacer  -->
 
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/nouislider.min.js"></script>
-    <script src="js/jquery.datatables.min.js"></script> <!-- v1.10.10 -->
     <script src="js/d3.min.js"></script> <!-- v3.5.10 -->
     <script src="js/d3.geo.projection.v0.min.js"></script>
     <script src="js/topojson.v1.min.js"></script>
     <script src="js/colorbrewer.min.js"></script>
+    <script src="js/nv.d3.min.js"></script>
     <script src="js/main.js"></script>
 
 
