--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <title>ISD prioritization</title>
 
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/nouislider.min.css" rel="stylesheet">
