docs page to download print maps

--- a/index.html
+++ b/index.html
@@ -84,11 +84,14 @@
     </div><!-- /.modal -->
 
 
-  <div id="title"><h2 style="margin:0px;">ISD Prioritization
-    <small>
-    <span id="info-icon" class="glyphicon glyphicon-info-sign" aria-hidden="true" onClick="$('#info-modal').modal();"></span>
-    </small>
-  </h2></div>
+    <div id="title"><h2 style="margin: 0 0 6px 0;">ISD Prioritization</h2>
+      <p><small>
+      <span class="info-icon" onClick="$('#info-modal').modal();">
+        <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>  source info
+      </span>&nbsp; | &nbsp;
+        <a class="info-icon" href="/docs"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> maps for print/presentation</a>
+      </small></p>
+    </div>
 
   <img id="logo" src="images/arc_logo.png">
 
