--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <span class="info-icon" onClick="$('#info-modal').modal();">
         <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>  source info
       </span>&nbsp; | &nbsp;
-        <a class="info-icon" href="/docs"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> maps for print/presentation</a>
+        <a class="info-icon" href="docs"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> maps for print/presentation</a>
       </small></p>
     </div>
 
