most populace city for top 15 ranked countries displayed

--- a/index.html
+++ b/index.html
@@ -73,6 +73,14 @@
 
 <hr>
 
+<p><h5>Administrative boundaries </h5>
+<small>Data source: Natural Earth</small></p>
+
+<p><h5>Cities </h5>
+<small>Data source: Natural Earth 110m populated places (displaying highest population city for each of top 15 ranked countries)</small></p>
+
+<hr>
+
 <p><small>The maps used do not imply the expression of any opinion concerning the legal status of a territory or of its authorities.</small></p>
 
           </div>
