if cat is set 0, subcat sliders grey out

--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
         <hr>
         <div class="subcat-group">
           <h5 class="subcat">Disasters <small><span class="disasters weight"></span></small></h5>
-        	<div class="sliders" id="disasters"></div>
+        	<div class="sliders need" id="disasters"></div>
           <h5 class="subcat">Vulnerability <small><span class="vuln weight"></span></small></h5>
-        	<div class="sliders" id="vuln"></div>
+        	<div class="sliders need" id="vuln"></div>
           <h5 class="subcat">Lack of coping capacity <small><span class="coping weight"></span></small></h5>
-          <div class="sliders" id="coping"></div>
+          <div class="sliders need" id="coping"></div>
           <h5 class="subcat">Population <small><span class="pop weight"></span></small></h5>
-        	<div class="sliders" id="pop"></div>
+        	<div class="sliders need" id="pop"></div>
         </div>
       </div>
       <div id="funding-group" class="col-sm-4">
@@ -135,9 +135,9 @@
         <hr>
         <div class="subcat-group">
           <h5 class="subcat">ODA <small><span class="oda weight"></span></small></h5>
-        	<div class="sliders" id="oda"></div>
+        	<div class="sliders funding" id="oda"></div>
           <h5 class="subcat">Top 21 humanitarian assistance recipients <small><span class="recip weight"></span></small></h5>
-        	<div class="sliders" id="recip"></div>
+        	<div class="sliders funding" id="recip"></div>
         </div>
       </div>
       <div id="entry-group" class="col-sm-4">
@@ -146,15 +146,15 @@
         <hr>
         <div class="subcat-group">
           <h5 class="subcat">Presence of IFRC office <small><span class="ifrc weight"></span></small></h5>
-        	<div class="sliders" id="ifrc"></div>
+        	<div class="sliders entry" id="ifrc"></div>
           <h5 class="subcat">ISD staff presence <small><span class="isd weight"></span></small></h5>
-        	<div class="sliders" id="isd"></div>
+        	<div class="sliders entry" id="isd"></div>
           <h5 class="subcat">Past ARC deployments <small><span class="deploy weight"></span></small></h5>
-          <div class="sliders" id="deploy"></div>
+          <div class="sliders entry" id="deploy"></div>
           <h5 class="subcat">Human conflict (lack of) <small><span class="conflict weight"></span></small></h5>
-        	<div class="sliders" id="conflict"></div>
+        	<div class="sliders entry" id="conflict"></div>
           <h5 class="subcat">ISD FY16 programs <small><span class="fy16 weight"></span></small></h5>
-        	<div class="sliders" id="fy16"></div>
+        	<div class="sliders entry" id="fy16"></div>
         </div>
 
         <button class="btn btn-default btn-xs" type="button" data-toggle="collapse" data-target="#collapsePrograms" aria-expanded="false" aria-controls="collapsePrograms">
