--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/nouislider.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
 
 
@@ -65,7 +66,7 @@
 <p><h5>Existing ISD Staff - Number of current staff </h5>
 <small>Data source: ARC. Data are accurate as of Dec 2015.</small></p>
 
-<p><h5>Lack of Human Conflict - Includes current and projected levels </h5>
+<p><h5>Security (Lack of Human Conflict) - Includes current and projected levels </h5>
 <small>Data source: 2016 INFORM database v0.2.25.</small></p>
 
 <p><h5>ISD FY16 Programs - Programs being implemented in fiscal year 2016 </h5>
@@ -115,8 +116,7 @@
 <div class="container">
     <div class="row">
       <div id="need-group" class="col-sm-4">
-        <h3>Need <small><span class="need weight"></span></small></h3>
-        <div class="sliders" id="need"></div>
+        <h3>Need &nbsp;<i id="need" class="toggle-group fa fa-toggle-on" onClick="toggleGroup(this);"></i></h3>
         <hr>
         <div class="subcat-group">
           <h5 class="subcat">Disasters <small><span class="disasters weight"></span></small></h5>
@@ -130,8 +130,7 @@
         </div>
       </div>
       <div id="funding-group" class="col-sm-4">
-        <h3>Available funding <small><span class="funding weight"></span></small></h3>
-        <div class="sliders" id="funding"></div>
+        <h3>Available funding &nbsp;<i id="funding" class="toggle-group fa fa-toggle-on" onClick="toggleGroup(this);"></i></h3>
         <hr>
         <div class="subcat-group">
           <h5 class="subcat">ODA <small><span class="oda weight"></span></small></h5>
@@ -141,17 +140,16 @@
         </div>
       </div>
       <div id="entry-group" class="col-sm-4">
-        <h3>Ease of entry/operations <small><span class="entry weight"></span></small></h3>
-        <div class="sliders" id="entry"></div>
+        <h3>Ease of entry/operations &nbsp;<i id="entry" class="toggle-group fa fa-toggle-on" onClick="toggleGroup(this);"></i></h3>
         <hr>
         <div class="subcat-group">
           <h5 class="subcat">Presence of IFRC office <small><span class="ifrc weight"></span></small></h5>
         	<div class="sliders entry" id="ifrc"></div>
           <h5 class="subcat">ISD staff presence <small><span class="isd weight"></span></small></h5>
         	<div class="sliders entry" id="isd"></div>
-          <h5 class="subcat">Past ARC deployments <small><span class="deploy weight"></span></small></h5>
+          <h5 class="subcat">Past ARC disaster deployments <small><span class="deploy weight"></span></small></h5>
           <div class="sliders entry" id="deploy"></div>
-          <h5 class="subcat">Human conflict (lack of) <small><span class="conflict weight"></span></small></h5>
+          <h5 class="subcat">Security (lack of human conflict) <small><span class="conflict weight"></span></small></h5>
         	<div class="sliders entry" id="conflict"></div>
           <h5 class="subcat">ISD FY16 programs <small><span class="fy16 weight"></span></small></h5>
         	<div class="sliders entry" id="fy16"></div>
