--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     <div id="title"><h2 style="margin: 0 0 6px 0;">ISD Prioritization</h2>
       <p><small>
-      <span class="info-icon" onClick="$('#info-modal').modal();">
+      <span class="info-icon" onclick="$('#info-modal').modal();">
         <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>  source info
       </span>&nbsp; | &nbsp;
         <a class="info-icon" href="docs"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> maps for print/presentation</a>
@@ -116,41 +116,57 @@
 <div class="container">
     <div class="row">
       <div id="need-group" class="col-sm-4">
-        <h3>Need &nbsp;<i id="need" class="toggle-group fa fa-toggle-on" onClick="toggleGroup(this);"></i></h3>
+        <h3>Need &nbsp;<i id="need" class="toggle-group fa fa-toggle-on" onclick="toggleGroup(this);"></i></h3>
         <hr>
         <div class="subcat-group">
-          <h5 class="subcat">Disasters <small><span class="disasters weight"></span></small></h5>
+          <h5 class="subcat">Disaster exposure <small><span class="disasters weight"></span></small></h5>
         	<div class="sliders need" id="disasters"></div>
+          <h5 class="subcat">People affected by disasters <small><span class="emdat weight"></span></small></h5>
+        	<div class="sliders need" id="emdat"></div>
           <h5 class="subcat">Vulnerability <small><span class="vuln weight"></span></small></h5>
         	<div class="sliders need" id="vuln"></div>
           <h5 class="subcat">Lack of coping capacity <small><span class="coping weight"></span></small></h5>
           <div class="sliders need" id="coping"></div>
-          <h5 class="subcat">Population <small><span class="pop weight"></span></small></h5>
-        	<div class="sliders need" id="pop"></div>
+          <h5 class="subcat">Percent urban population <small><span class="urban weight"></span></small></h5>
+        	<div class="sliders need" id="urban"></div>
         </div>
       </div>
       <div id="funding-group" class="col-sm-4">
-        <h3>Available funding &nbsp;<i id="funding" class="toggle-group fa fa-toggle-on" onClick="toggleGroup(this);"></i></h3>
+        <h3>Available funding &nbsp;<i id="funding" class="toggle-group fa fa-toggle-on" onclick="toggleGroup(this);"></i></h3>
         <hr>
         <div class="subcat-group">
-          <h5 class="subcat">ODA <small><span class="oda weight"></span></small></h5>
-        	<div class="sliders funding" id="oda"></div>
-          <h5 class="subcat">Top 21 humanitarian assistance recipients <small><span class="recip weight"></span></small></h5>
-        	<div class="sliders funding" id="recip"></div>
+          <!-- <h5 class="subcat">ODA <small><span class="oda weight"></span></small></h5>
+        	<div class="sliders funding" id="oda"></div> -->
+          <!-- <h5 class="subcat">Top 21 humanitarian assistance recipients <small><span class="recip weight"></span></small></h5>
+        	<div class="sliders funding" id="recip"></div> -->
+          <h5 class="subcat">USAID funding <small><span class="usaid weight"></span></small></h5>
+          <div class="sliders funding" id="usaid"></div>
+          <h5 class="subcat">Migrants to USA <small><span class="usmigr weight"></span></small></h5>
+          <div class="sliders funding" id="usmigr"></div>
+          <h5 class="subcat">Presence of top 25 companies <small><span class="top25 weight"></span></small></h5>
+          <div class="sliders funding" id="top25"></div>
         </div>
       </div>
       <div id="entry-group" class="col-sm-4">
-        <h3>Ease of entry/operations &nbsp;<i id="entry" class="toggle-group fa fa-toggle-on" onClick="toggleGroup(this);"></i></h3>
+        <h3>Ease of entry/operations &nbsp;<i id="entry" class="toggle-group fa fa-toggle-on" onclick="toggleGroup(this);"></i></h3>
         <hr>
         <div class="subcat-group">
-          <h5 class="subcat">Presence of IFRC office <small><span class="ifrc weight"></span></small></h5>
-        	<div class="sliders entry" id="ifrc"></div>
-          <h5 class="subcat">ISD staff presence <small><span class="isd weight"></span></small></h5>
-        	<div class="sliders entry" id="isd"></div>
-          <h5 class="subcat">Past ARC disaster deployments <small><span class="deploy weight"></span></small></h5>
-          <div class="sliders entry" id="deploy"></div>
+          <h5 class="subcat">Presence of IFRC office <small><span class="ifrcoffice weight"></span></small></h5>
+        	<div class="sliders entry" id="ifrcoffice"></div>
+          <h5 class="subcat">ISD staff presence <small><span class="isdstaff weight"></span></small></h5>
+        	<div class="sliders entry" id="isdstaff"></div>
+          <h5 class="subcat">ARC disaster deployments <small><span class="irocpeople weight"></span></small></h5>
+          <div class="sliders entry" id="irocpeople"></div>
+          <h5 class="subcat">ARC disaster money <small><span class="iroccash weight"></span></small></h5>
+          <div class="sliders entry" id="iroccash"></div>
+          <h5 class="subcat">ARC disaster supplies <small><span class="irocsupp weight"></span></small></h5>
+          <div class="sliders entry" id="irocsupp"></div>
           <h5 class="subcat">Security (lack of human conflict) <small><span class="conflict weight"></span></small></h5>
         	<div class="sliders entry" id="conflict"></div>
+          <h5 class="subcat">CTP response (all appeals) <small><span class="ctpall weight"></span></small></h5>
+        	<div class="sliders entry" id="ctpall"></div>
+          <h5 class="subcat">CTP response (ARC) <small><span class="ctparc weight"></span></small></h5>
+        	<div class="sliders entry" id="ctparc"></div>
           <h5 class="subcat">ISD FY16 programs <small><span class="fy16 weight"></span></small></h5>
         	<div class="sliders entry" id="fy16"></div>
         </div>
@@ -160,31 +176,32 @@
         </button>
         <div class="collapse" id="collapsePrograms">
           <div class="well">
-            <div><small>Select <a onClick="checkedPrograms('all');">all</a> | <a onClick="checkedPrograms('none');">none</a></small></div>
+            <div><small>Select <a onclick="checkedPrograms('all');">all</a> | <a onclick="checkedPrograms('none');">none</a></small></div>
             <div id="program-sectors">
               <div class="checkbox">
-                <label><input type="checkbox" name="program-check" value="cbh" onchange="setWeighting();" checked>Community-based health</label>
+                <label><input type="checkbox" name="program-check" value="fy16cbh" onchange="setWeighting();" checked>Community-based health</label>
               </div>
               <div class="checkbox">
-                <label><input type="checkbox" name="program-check" value="drr" onchange="setWeighting();" checked>Disaster recovery</label>
+                <label><input type="checkbox" name="program-check" value="fy16dr" onchange="setWeighting();" checked>Disaster recovery</label>
               </div>
               <div class="checkbox">
-                <label><input type="checkbox" name="program-check" value="measles" onchange="setWeighting();" checked>Measles prevention</label>
+                <label><input type="checkbox" name="program-check" value="fy16measles" onchange="setWeighting();" checked>Measles prevention</label>
               </div>
               <div class="checkbox">
-                <label><input type="checkbox" name="program-check" value="resilience" onchange="setWeighting();" checked>Resilience building</label>
+                <label><input type="checkbox" name="program-check" value="fy16resilience" onchange="setWeighting();" checked>Resilience building</label>
               </div>
               <div class="checkbox">
-                <label><input type="checkbox" name="program-check" value="od" onchange="setWeighting();" checked>Strengthening Red Cross partners</label>
+                <label><input type="checkbox" name="program-check" value="fy16od" onchange="setWeighting();" checked>Strengthening Red Cross partners</label>
               </div>
               <div class="checkbox">
-                <label><input type="checkbox" name="program-check" value="urbandp" onchange="setWeighting();" checked>Urban disaster preparedness</label>
+                <label><input type="checkbox" name="program-check" value="fy16urbandp" onchange="setWeighting();" checked>Urban disaster preparedness</label>
               </div>
             </div>
           </div>
         </div>
 
       </div>
+      <a class="info-icon" onclick="quickSetSliders('zero')"> zero out all sliders</a> &nbsp; | &nbsp; <a class="info-icon" onclick="quickSetSliders('default')"> default values</a>
     </div>
 
 <hr>
