no decimals on weighting readout

--- a/index.html
+++ b/index.html
@@ -119,15 +119,15 @@
         <h3>Need &nbsp;<i id="need" class="toggle-group fa fa-toggle-on" onclick="toggleGroup(this);"></i></h3>
         <hr>
         <div class="subcat-group">
-          <h5 class="subcat">Disaster exposure <small><span class="disasters weight"></span></small></h5>
+          <h5 class="subcat">Disaster exposure &nbsp; <small><span class="disasters weight"></span></small></h5>
         	<div class="sliders need" id="disasters"></div>
-          <h5 class="subcat">People affected by disasters <small><span class="emdat weight"></span></small></h5>
+          <h5 class="subcat">People affected by disasters &nbsp; <small><span class="emdat weight"></span></small></h5>
         	<div class="sliders need" id="emdat"></div>
-          <h5 class="subcat">Vulnerability <small><span class="vuln weight"></span></small></h5>
+          <h5 class="subcat">Vulnerability &nbsp; <small><span class="vuln weight"></span></small></h5>
         	<div class="sliders need" id="vuln"></div>
-          <h5 class="subcat">Lack of coping capacity <small><span class="coping weight"></span></small></h5>
+          <h5 class="subcat">Lack of coping capacity &nbsp; <small><span class="coping weight"></span></small></h5>
           <div class="sliders need" id="coping"></div>
-          <h5 class="subcat">Percent urban population <small><span class="urban weight"></span></small></h5>
+          <h5 class="subcat">Percent urban population &nbsp; <small><span class="urban weight"></span></small></h5>
         	<div class="sliders need" id="urban"></div>
         </div>
       </div>
@@ -135,15 +135,15 @@
         <h3>Available funding &nbsp;<i id="funding" class="toggle-group fa fa-toggle-on" onclick="toggleGroup(this);"></i></h3>
         <hr>
         <div class="subcat-group">
-          <!-- <h5 class="subcat">ODA <small><span class="oda weight"></span></small></h5>
+          <!-- <h5 class="subcat">ODA &nbsp; <small><span class="oda weight"></span></small></h5>
         	<div class="sliders funding" id="oda"></div> -->
-          <!-- <h5 class="subcat">Top 21 humanitarian assistance recipients <small><span class="recip weight"></span></small></h5>
+          <!-- <h5 class="subcat">Top 21 humanitarian assistance recipients &nbsp; <small><span class="recip weight"></span></small></h5>
         	<div class="sliders funding" id="recip"></div> -->
-          <h5 class="subcat">USAID funding <small><span class="usaid weight"></span></small></h5>
+          <h5 class="subcat">USAID funding &nbsp; <small><span class="usaid weight"></span></small></h5>
           <div class="sliders funding" id="usaid"></div>
-          <h5 class="subcat">Migrants to USA <small><span class="usmigr weight"></span></small></h5>
+          <h5 class="subcat">Migrants to USA &nbsp; <small><span class="usmigr weight"></span></small></h5>
           <div class="sliders funding" id="usmigr"></div>
-          <h5 class="subcat">Presence of top 25 companies <small><span class="top25 weight"></span></small></h5>
+          <h5 class="subcat">Presence of top 25 companies &nbsp; <small><span class="top25 weight"></span></small></h5>
           <div class="sliders funding" id="top25"></div>
         </div>
       </div>
@@ -151,23 +151,23 @@
         <h3>Ease of entry/operations &nbsp;<i id="entry" class="toggle-group fa fa-toggle-on" onclick="toggleGroup(this);"></i></h3>
         <hr>
         <div class="subcat-group">
-          <h5 class="subcat">Presence of IFRC office <small><span class="ifrcoffice weight"></span></small></h5>
+          <h5 class="subcat">Presence of IFRC office &nbsp; <small><span class="ifrcoffice weight"></span></small></h5>
         	<div class="sliders entry" id="ifrcoffice"></div>
-          <h5 class="subcat">ISD staff presence <small><span class="isdstaff weight"></span></small></h5>
+          <h5 class="subcat">ISD staff presence &nbsp; <small><span class="isdstaff weight"></span></small></h5>
         	<div class="sliders entry" id="isdstaff"></div>
-          <h5 class="subcat">ARC disaster deployments <small><span class="irocpeople weight"></span></small></h5>
+          <h5 class="subcat">ARC disaster deployments &nbsp; <small><span class="irocpeople weight"></span></small></h5>
           <div class="sliders entry" id="irocpeople"></div>
-          <h5 class="subcat">ARC disaster money <small><span class="iroccash weight"></span></small></h5>
+          <h5 class="subcat">ARC disaster money &nbsp; <small><span class="iroccash weight"></span></small></h5>
           <div class="sliders entry" id="iroccash"></div>
-          <h5 class="subcat">ARC disaster supplies <small><span class="irocsupp weight"></span></small></h5>
+          <h5 class="subcat">ARC disaster supplies &nbsp; <small><span class="irocsupp weight"></span></small></h5>
           <div class="sliders entry" id="irocsupp"></div>
-          <h5 class="subcat">Security (lack of human conflict) <small><span class="conflict weight"></span></small></h5>
+          <h5 class="subcat">Security (lack of human conflict) &nbsp; <small><span class="conflict weight"></span></small></h5>
         	<div class="sliders entry" id="conflict"></div>
-          <h5 class="subcat">CTP response (all appeals) <small><span class="ctpall weight"></span></small></h5>
+          <h5 class="subcat">CTP response (all appeals) &nbsp; <small><span class="ctpall weight"></span></small></h5>
         	<div class="sliders entry" id="ctpall"></div>
-          <h5 class="subcat">CTP response (ARC) <small><span class="ctparc weight"></span></small></h5>
+          <h5 class="subcat">CTP response (ARC) &nbsp; <small><span class="ctparc weight"></span></small></h5>
         	<div class="sliders entry" id="ctparc"></div>
-          <h5 class="subcat">ISD FY16 programs <small><span class="fy16 weight"></span></small></h5>
+          <h5 class="subcat">ISD FY16 programs &nbsp; <small><span class="fy16 weight"></span></small></h5>
         	<div class="sliders entry" id="fy16"></div>
         </div>
 
