missing data indicator

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         </div>
       </div>
       <div id="entry-group" class="col-sm-4">
-        <h3>Ease of entry/operations &nbsp;<i id="entry" class="toggle-group fa fa-toggle-on" onclick="toggleGroup(this);"></i></h3>
+        <h3>Ease of operations &nbsp;<i id="entry" class="toggle-group fa fa-toggle-on" onclick="toggleGroup(this);"></i></h3>
         <hr>
         <div class="subcat-group">
           <h5 class="subcat">Presence of IFRC office &nbsp; <small><span class="ifrcoffice weight"></span></small></h5>
