fy16 programs map overlay

--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
       </span>&nbsp; | &nbsp;
         <a class="info-icon" href="docs"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> maps for print/presentation</a>
       </small></p>
+      <p><small><span class="info-icon" onclick="togglePrograms(this);">
+        <i class="fa fa-eye"></i> <span id="toggle-prgs-label">show FY16 programs</span>
+      </span></small></p>
     </div>
 
   <img id="logo" src="images/arc_logo.png">
