remove iroc supplies, minor language edits

--- a/index.html
+++ b/index.html
@@ -81,13 +81,10 @@
 <p><h5>ARC disaster money - ARC monetary contributions, 2009-2015  </h5>
 <small>Data source: ARC (data from 2009-2015, inclusive)</small></p>
 
-<p><h5>ARC disaster supplies - ARC supplies donated, 2009-2015  </h5>
-<small>Data source: ARC (data from 2009-2015, inclusive)</small></p>
-
 <p><h5>Security (lack of human conflict) - includes current and projected levels </h5>
 <small>Data source: INFORM database 2016 v0.2.27.</small></p>
 
-<p><h5>CTP response (all appeals) - CTP response implemented as part of an IFRC appeal</h5>
+<p><h5>CTP response (all IFRC appeals) - CTP response implemented as part of an IFRC appeal</h5>
 <small>Data source: IFRC</small></p>
 
 <p><h5>CTP response (ARC) - CTP response implemented with ARC involvement </h5>
@@ -182,15 +179,13 @@
         	<div class="sliders entry" id="ifrcoffice"></div>
           <h5 class="subcat">ISD staff presence &nbsp; <small><span class="isdstaff weight"></span></small></h5>
         	<div class="sliders entry" id="isdstaff"></div>
+          <h5 class="subcat">Security (lack of human conflict) &nbsp; <small><span class="conflict weight"></span></small></h5>
+          <div class="sliders entry" id="conflict"></div>
           <h5 class="subcat">ARC disaster deployments &nbsp; <small><span class="irocpeople weight"></span></small></h5>
           <div class="sliders entry" id="irocpeople"></div>
           <h5 class="subcat">ARC disaster money &nbsp; <small><span class="iroccash weight"></span></small></h5>
           <div class="sliders entry" id="iroccash"></div>
-          <h5 class="subcat">ARC disaster supplies &nbsp; <small><span class="irocsupp weight"></span></small></h5>
-          <div class="sliders entry" id="irocsupp"></div>
-          <h5 class="subcat">Security (lack of human conflict) &nbsp; <small><span class="conflict weight"></span></small></h5>
-        	<div class="sliders entry" id="conflict"></div>
-          <h5 class="subcat">CTP response (all appeals) &nbsp; <small><span class="ctpall weight"></span></small></h5>
+          <h5 class="subcat">CTP response (all IFRC appeals) &nbsp; <small><span class="ctpall weight"></span></small></h5>
         	<div class="sliders entry" id="ctpall"></div>
           <h5 class="subcat">CTP response (ARC) &nbsp; <small><span class="ctparc weight"></span></small></h5>
         	<div class="sliders entry" id="ctparc"></div>
