--- a/index.html
+++ b/index.html
@@ -234,7 +234,8 @@
 
   <div style="height:80px;"></div> <!-- spacer  -->
 
-    <script src="js/jquery.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/nouislider.min.js"></script>
     <script src="js/d3.min.js"></script> <!-- v3.5.10 -->
