staff layer, table icons for staff and programs

--- a/index.html
+++ b/index.html
@@ -119,10 +119,12 @@
       <span class="info-icon" onclick="$('#info-modal').modal();">
         <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>  source info
       </span>&nbsp; | &nbsp;
-        <a class="info-icon" href="docs"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> maps for print/presentation</a>
+        <a class="info-icon" href="docs"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> maps for print</a>
       </small></p>
       <p><small><span class="info-icon" onclick="togglePrograms(this);">
         <i class="fa fa-eye"></i> <span id="toggle-prgs-label">show FY16 programs</span>
+      </span><br><span class="info-icon" onclick="toggleStaff(this);">
+        <i class="fa fa-eye"></i> <span id="toggle-staff-label">show staff</span>
       </span></small></p>
     </div>
 
